# canvas

./: .circuit_breaker_state  .env.dev  .env.prod  .exit_signals  .gitignore  .last_reset  .ralph_session  .ralph_session_history  .response_analysis  analyze_predecessors.py  analyze_tdd.py  analyze_tdd_stubs.py  app-spec-v10.md  application.md  docker-compose.prod.yml  docker-compose.yml  nginx.prod.conf  progress.json  session-3.md  status.json  strategy-lifecycle-canvas.md
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_create_users_table.py  002_canvas_tables.py  004_monthly_reviews.py  005_canvas_trigger.py  006_health_indicator_cache.py  007_add_not_observed_status.py  008_thesis_categories.py  009_thesis_category_colors.py  010_add_group_leader_role.py  011_add_must_reset_password.py
backend/canvas/: __init__.py  config.py  db.py  main.py  schemas.py  seed.py
backend/canvas/auth/: dependencies.py  routes.py  schemas.py  service.py  user_service.py
backend/canvas/models/: __init__.py  attachment.py  canvas.py  commitment.py  monthly_review.py  proof_point.py  thesis.py  thesis_category.py  user.py  vbu.py
backend/canvas/pdf/: __init__.py  service.py  test_service.py
backend/canvas/portfolio/: router.py  schemas.py  service.py
backend/canvas/reviews/: router.py  schemas.py  (+1 more)
backend/tests/: conftest.py  test_config_contract.py  test_db_contract.py  test_docker_integration.py  test_health_contract.py  test_models_contract.py  test_pdf_routes.py  test_portfolio_routes.py
(+242 files in other folders)
